--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Produk 1 -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="bg/p1.jpg" class="card-img-top" alt="Ortuseight Catalyst">
+                    <img src="p1.jpg" class="card-img-top" alt="Ortuseight Catalyst">
                     <div class="card-body">
                         <h5 class="card-title">Ortuseight Catalyst</h5>
                         <p class="card-text">Rp399.000 - Sepatu futsal ringan dengan grip maksimal.</p>
