--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- Produk 2 -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="bg/p2.jpg" class="card-img-top" alt="Nike Tiempo">
+                    <img src="p2.jpg" class="card-img-top" alt="Nike Tiempo">
                     <div class="card-body">
                         <h5 class="card-title">Nike Tiempo Legend</h5>
                         <p class="card-text">Rp850.000 - Kontrol bola optimal dan kenyamanan premium.</p>
