--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!-- Produk 3 -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="bg/p3.jpg" class="card-img-top" alt="Adidas Predator">
+                    <img src="p3.jpg" class="card-img-top" alt="Adidas Predator">
                     <div class="card-body">
                         <h5 class="card-title">Adidas Predator Freak</h5>
                         <p class="card-text">Rp999.000 - Desain agresif dengan upper kontrol tinggi.</p>
