--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- Produk 4 -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="bg/p4.jpg" class="card-img-top" alt="Specs Carnage">
+                    <img src="p4.jpg" class="card-img-top" alt="Specs Carnage">
                     <div class="card-body">
                         <h5 class="card-title">Specs Carnage IN</h5>
                         <p class="card-text">Rp320.000 - Sol anti slip dan cocok untuk pemula.</p>
