--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <!-- Produk 5 -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="bg/p5.jpg" class="card-img-top" alt="Puma Ultra">
+                    <img src="p5.jpg" class="card-img-top" alt="Puma Ultra">
                     <div class="card-body">
                         <h5 class="card-title">Puma Ultra 5</h5>
                         <p class="card-text">Rp775.000 - Teknologi NETFIT untuk performa maksimal.</p>
