--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <!-- Produk 6 -->
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="bg/p6.jpg" class="card-img-top" alt="Mills Vonix">
+                    <img src="p6.jpg" class="card-img-top" alt="Mills Vonix">
                     <div class="card-body">
                         <h5 class="card-title">Mills Vonix IN JR</h5>
                         <p class="card-text">Rp620.000 - Bahan kulit sintetis dan fleksibel untuk lapangan indoor.</p>
