--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main class="container mx-auto px-4 py-8">
         <!-- Banner Promo -->
         <div class="mb-8" id="home">
-            <img src="bg/baner.PNG" alt="Banner Promo" class="w-full rounded-lg shadow">
+            <img src="baner.PNG" alt="Banner Promo" class="w-full rounded-lg shadow">
         </div>
 
         <!-- Tabel Promo -->
